[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "http2"] }
deno_task_shell = "0.17.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
markup = "0.15.0"
once_cell = "1.19.0"
redis = "0.25.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
